--- a/issue1.html
+++ b/issue1.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/issue1.css">
 </head>
 
-<a href="/index.html" class="tmyk-link">TMYK</a>
+<a href="index.html" class="tmyk-link">TMYK</a>
 
 <header>
   <h1>WHAT’S IN MY BAG?</h1>
