--- a/issue2.html
+++ b/issue2.html
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <a href="/index.html" class="tmyk-link">TMYK</a>
+    <a href="index.html" class="tmyk-link">TMYK</a>
 
     <a id="popup1" class="popup" href="#">
         <p>Nope, not them. But they look friendly!!</p>
