--- a/issue3.html
+++ b/issue3.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <a href="/index.html" class="tmyk-link">TMYK</a>
+    <a href="index.html" class="tmyk-link">TMYK</a>
 
 
 <div class="stack popup-image" style="width: 300px; height: 500px">
